# gws-meet2gemini

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
app/: README.md  main.py
backend/: .env.example  Dockerfile  diff.txt  main.py  pyproject.toml  test_schema_generation.py  test_zoho_write.py
backend/app/: README.md  main.py
backend/app/application/use_cases/: auto_process_meetings.py  collect_meetings.py  extract_structured_data_only.py  generate_line_message.py  get_ai_costs.py  get_auto_process_stats.py  get_candidate_detail.py  get_candidate_meetings.py  get_jd_detail.py  get_meeting_list.py  get_meeting_list_paginated.py  get_structured_data.py  image_gen.py  list_candidates.py  manage_custom_schemas.py  match_candidate_jobs.py  process_structured_data.py  sync_structured_data_to_zoho.py  update_meeting_transcript.py
backend/app/domain/entities/: custom_schema.py  image_gen.py  marketing_chat.py  structured_data.py
backend/app/domain/repositories/: custom_schema_repository.py
backend/app/domain/schemas/: structured_extraction_schema.py
backend/app/infrastructure/: __init__.py
backend/docs/: ENDPOINTS.md
backend/gws_meet2gemini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: gsc_server.py  test_adk.py  test_response_time.py  test_token_usage.py  vectorize_companies.py
backend/tests/: conftest.py  structured_gemini_extractor_split.py  test_zoho_error_handling.py  validate_setup.py  watch_setup.py
backend/tests/auto_processing/: __init__.py
backend/tests/chatkit/: test_context_manager.py
(+395 files in other folders)
