[project]
name = "gws-meet2gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.177.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-firestore>=2.16.1",
    "google-cloud-storage>=2.18.2",
    "fastapi>=0.112.2",
    "uvicorn[standard]>=0.30.6",
    "supabase>=2.9.0",
    "google-genai>=1.28.0",
    "python-dotenv>=1.1.1",
    "zohocrmsdk8-0>=3.0.0",
    "google-cloud-tasks>=2.19.3",
    "openai>=1.61.0",
    "openai-agents>=0.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
]
